--- a/backend/package.json
+++ b/backend/package.json
@@ -1,4 +1,7 @@
 {
+  "scripts": {
+    "dev": "nodemon src/index.ts"
+  },
   "dependencies": {
     "chess.js": "^1.0.0",
     "nodemon": "^3.1.9",
